hub/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hub
  namespace: k8plex-test
spec:
  selector:
    app: hub
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hub-debug
  namespace: k8plex-test
spec:
  selector:
    app: hub
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: hub-ssh
  namespace: k8plex-test
spec:
  selector:
    app: hub
  ports:
    - protocol: TCP
      port: 222
      targetPort: 22
---
apiVersion: v1
kind: Service
metadata:
  name: hub-mysql
  namespace: k8plex-test
spec:
  selector:
    app: hub-mysql
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
