hub/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8plex-test-hub-account
  namespace: k8plex-test
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
     - k8plex-test.vo.elte.hu
    secretName: k8plex-test-tls
  rules:
  - host: k8plex-test.vo.elte.hu
    http:
      paths:
      - path: /accounts
        pathType: Prefix
        backend:
          service:
            name: hub
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8plex-test-hub-admin
  namespace: k8plex-test
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
     - k8plex-test.vo.elte.hu
    secretName: k8plex-test-tls
  rules:
  - host: k8plex-test.vo.elte.hu
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: hub
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8plex-test-hub-root
  namespace: k8plex-test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /hub
spec:
  tls:
  - hosts:
     - k8plex-test.vo.elte.hu
    secretName: k8plex-test-tls
  rules:
  - host: k8plex-test.vo.elte.hu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hub
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8plex-test-hub-service
  namespace: k8plex-test
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
     - k8plex-test.vo.elte.hu
    secretName: k8plex-test-tls
  rules:
  - host: k8plex-test.vo.elte.hu
    http:
      paths:
      - path: /hub
        pathType: Prefix
        backend:
          service:
            name: hub
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8plex-test-hub-static
  namespace: k8plex-test
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
     - k8plex-test.vo.elte.hu
    secretName: k8plex-test-tls
  rules:
  - host: k8plex-test.vo.elte.hu
    http:
      paths:
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: hub
            port:
              number: 80
